feat(): refactor xcode project to swift package

--- a/.gitIgnore
+++ b/.gitIgnore
@@ -1,26 +1,9 @@
-# CocoaPods
-Pods/
-
-# Build generated
-build/
-DerivedData/
-
-# Obj-C/Swift specific
-*.hmap
-*.ipa
-*.dSYM.zip
-*.dSYM
-
-# Xcode
-*.xcodeproj/*
-!*.xcodeproj/project.pbxproj
-!*.xcodeproj/xcshareddata/
-!*.xcworkspace/contents.xcworkspacedata
-/*.gcno
-**/xcshareddata/WorkspaceSettings.xcsettings
-
-# Mac OS
 .DS_Store
-
-# ETC
-*.entitlements
+/.build
+/Packages
+/*.xcodeproj
+xcuserdata/
+DerivedData/
+.swiftpm/config/registries.json
+.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
+.netrc
